--- a/C3.html
+++ b/C3.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>C3</title>
-    <style>
-        body {
-            background-color: #333;
-            color: #fff;
-        }
-    </style>
-    <title>C3</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GitHub Pages</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Mapa</h1>
-    <p>En el siguiente mapa se veran puntos claves donde estarian ubicados los depositos</p>
-    <img src="C:\Users\truka\OneDrive\Escritorio\C3_Smart_City\Mapa.jpg" alt="Mapa" width="1280" height="640">
+    <p>En la siguiente imagen se encuentran puntos claves donde ubicar nuestros depositos</p>
+    <img src="Mapa.jpg" alt="Map">
 </body>
 </html>
